@startuml "Classes Diagram"

class Connect4 {
  - game
  - GameView

  init()
  play()
}
class Game {
  - turn
  + NUMBER_WINNER_TOKENS
  + NUMBER_PLAYERS
  + COLORS
  + board
  + players

  reset()
  getTurn()
  changeTurn()
  isConnect4()
  isGameOver()
}
class GameView {
  + MESSAGES
  + boardView
  + playersView

  playAgain()
  isValidAnswer()
  showMessage()
}
class Board {
  - board
  + DELIMITER
  + EMPTY
  + NUMBER_ROWS
  + line

  reset()
  chooseColumn()
  isValidColumn()
  isFullColumn()
  isFullBoard()
  putToken()
  getRow()
}
class BoardView {
  show()
}
class Players {
  setPlayer()
  getPlayer()
}
class PlayersView {
  choosePlayers()
  isValidPlayerType()
}
class HumanPlayer {
  chooseColumn()
  isValidColumn()
}
class MachinePlayer {
  chooseColumn()
  randomColumn()
}
class Line {
  - DIRECTIONS

  getLine()
  isValidCoordenate()
  shift()
  isWinner()
  getOppositeDirection()
}
class Messages {
  + head
  + gameOver
}

Connect4 *--> Game
Connect4 ..> GameView
Game --> Players
Game *--> Board
GameView ..> BoardView
GameView --> PlayersView
Messages <. GameView
Board ..> Line
Players *--> HumanPlayer
Players *--> MachinePlayer

@enduml